--- a/index.html
+++ b/index.html
@@ -1,57 +1,50 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Digital Imprints / Цифровые Отпечатки</title>
-<style>
-  body { font-family: Arial, sans-serif; margin: 0; background: #111; color: #fff; }
-  header { padding: 20px; text-align: center; background: #222; }
-  h1 { margin: 0; font-size: 2em; }
-  .lang-switch { margin-top: 10px; }
-  .gallery { display: flex; flex-wrap: wrap; justify-content: center; padding: 20px; gap: 10px; }
-  .gallery-item { width: 150px; height: 150px; overflow: hidden; background: #333; display: flex; align-items: center; justify-content: center; }
-  .gallery-item img { max-width: 100%; max-height: 100%; }
-  footer { text-align: center; padding: 10px; background: #222; font-size: 0.9em; }
-</style>
-</head>
-<body>
-
-<header>
-  <h1>Digital Imprints / Цифровые Отпечатки</h1>
-  <div class="lang-switch">
-    <button onclick="showLang('ru')">RU</button>
-    <button onclick="showLang('en')">EN</button>
-  </div>
-</header>
-
-<!-- Русская версия галереи -->
-<div id="gallery-ru" class="gallery">
-  <!-- 50 слотов -->
-  <div class="gallery-item"><img src="img/thumb01.jpg" alt="Отпечаток 01"></div>
-  <div class="gallery-item"><img src="img/thumb02.jpg" alt="Отпечаток 02"></div>
-  <div class="gallery-item"><img src="img/thumb03.jpg" alt="Отпечаток 03"></div>
-  <!-- … продолжить до thumb50.jpg -->
-</div>
-
-<!-- Английская версия галереи -->
-<div id="gallery-en" class="gallery" style="display:none;">
-  <div class="gallery-item"><img src="img/thumb01.jpg" alt="Digital Imprint 01"></div>
-  <div class="gallery-item"><img src="img/thumb02.jpg" alt="Digital Imprint 02"></div>
-  <div class="gallery-item"><img src="img/thumb03.jpg" alt="Digital Imprint 03"></div>
-  <!-- … продолжить до thumb50.jpg -->
-</div>
-
-<footer>
-  &copy; 2025 Alexey Kushnarenko. All rights reserved.
-</footer>
-
-<script>
-function showLang(lang) {
-  document.getElementById('gallery-ru').style.display = (lang === 'ru') ? 'flex' : 'none';
-  document.getElementById('gallery-en').style.display = (lang === 'en') ? 'flex' : 'none';
-}
-</script>
-
-</body>
-</html>
+<img src="img/thumb01.jpg" alt="Digital Imprint 01">
+        <img src="img/thumb02.jpg" alt="Digital Imprint 02">
+        <img src="img/thumb03.jpg" alt="Digital Imprint 03">
+        <img src="img/thumb04.jpg" alt="Digital Imprint 04">
+        <img src="img/thumb05.jpg" alt="Digital Imprint 05">
+        <img src="img/thumb06.jpg" alt="Digital Imprint 06">
+        <img src="img/thumb07.jpg" alt="Digital Imprint 07">
+        <img src="img/thumb08.jpg" alt="Digital Imprint 08">
+        <img src="img/thumb09.jpg" alt="Digital Imprint 09">
+        <img src="img/thumb10.jpg" alt="Digital Imprint 10">
+        <img src="img/thumb11.jpg" alt="Digital Imprint 11">
+        <img src="img/thumb12.jpg" alt="Digital Imprint 12">
+        <img src="img/thumb13.jpg" alt="Digital Imprint 13">
+        <img src="img/thumb14.jpg" alt="Digital Imprint 14">
+        <img src="img/thumb15.jpg" alt="Digital Imprint 15">
+        <img src="img/thumb16.jpg" alt="Digital Imprint 16">
+        <img src="img/thumb17.jpg" alt="Digital Imprint 17">
+        <img src="img/thumb18.jpg" alt="Digital Imprint 18">
+        <img src="img/thumb19.jpg" alt="Digital Imprint 19">
+        <img src="img/thumb20.jpg" alt="Digital Imprint 20">
+        <img src="img/thumb21.jpg" alt="Digital Imprint 21">
+        <img src="img/thumb22.jpg" alt="Digital Imprint 22">
+        <img src="img/thumb23.jpg" alt="Digital Imprint 23">
+        <img src="img/thumb24.jpg" alt="Digital Imprint 24">
+        <img src="img/thumb25.jpg" alt="Digital Imprint 25">
+        <img src="img/thumb26.jpg" alt="Digital Imprint 26">
+        <img src="img/thumb27.jpg" alt="Digital Imprint 27">
+        <img src="img/thumb28.jpg" alt="Digital Imprint 28">
+        <img src="img/thumb29.jpg" alt="Digital Imprint 29">
+        <img src="img/thumb30.jpg" alt="Digital Imprint 30">
+        <img src="img/thumb31.jpg" alt="Digital Imprint 31">
+        <img src="img/thumb32.jpg" alt="Digital Imprint 32">
+        <img src="img/thumb33.jpg" alt="Digital Imprint 33">
+        <img src="img/thumb34.jpg" alt="Digital Imprint 34">
+        <img src="img/thumb35.jpg" alt="Digital Imprint 35">
+        <img src="img/thumb36.jpg" alt="Digital Imprint 36">
+        <img src="img/thumb37.jpg" alt="Digital Imprint 37">
+        <img src="img/thumb38.jpg" alt="Digital Imprint 38">
+        <img src="img/thumb39.jpg" alt="Digital Imprint 39">
+        <img src="img/thumb40.jpg" alt="Digital Imprint 40">
+        <img src="img/thumb41.jpg" alt="Digital Imprint 41">
+        <img src="img/thumb42.jpg" alt="Digital Imprint 42">
+        <img src="img/thumb43.jpg" alt="Digital Imprint 43">
+        <img src="img/thumb44.jpg" alt="Digital Imprint 44">
+        <img src="img/thumb45.jpg" alt="Digital Imprint 45">
+        <img src="img/thumb46.jpg" alt="Digital Imprint 46">
+        <img src="img/thumb47.jpg" alt="Digital Imprint 47">
+        <img src="img/thumb48.jpg" alt="Digital Imprint 48">
+        <img src="img/thumb49.jpg" alt="Digital Imprint 49">
+        <img src="img/thumb50.jpg" alt="Digital Imprint 50">
