--- a/index-eng.html
+++ b/index-eng.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Imprints — EN</title>
+    <title>Digital Imprints</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
 </head>
 <body>
-
-    <div class="language-switcher">
+<header>
+    <nav>
         <a href="index.html">RU</a>
-    </div>
+    </nav>
+    <h1>Digital Imprints</h1>
+    <h2>Digital Imprints of Being</h2>
+</header>
 
-    <header>
-        <h1>Digital Imprints</h1>
-        <p>Digital Imprints of Being</p>
-    </header>
+<main class="gallery" id="gallery">
+    <!-- JS автоматически заполнит галерею -->
+</main>
 
-    <section class="gallery">
-        <!-- Генерируется script.js -->
-    </section>
-
+<script src="script.js"></script>
 </body>
 </html>
